﻿drkns 28.07.2015 23:15:06 +0200 - build 4403

1. Рефакторинг.

svs 28.07.2015 11:24:22 +0300 - build 4402

1. SQLite 3.8.11

shmuel 11.07.2015 02:20:25 +0200 - build 4401

1. M#3019: Number of custom columns is limited to 10 for plugin
   -> Now it is limited to 100 (C0...C99).

drkns 09.07.2015 00:39:19 +0200 - build 4400

1. Рефакторинг.

drkns 05.07.2015 19:19:57 +0200 - build 4399

1. Рефакторинг.

drkns 04.07.2015 21:54:54 +0200 - build 4398

1. После 4394.1 падал диалог поиска в некоторых сценариях.
   Сюда же - убедительная просьба не использовать одно- и двухбуквенные имена переменных в коде для чего бы то ни было, кроме индексов.

drkns 02.07.2015 23:37:09 +0200 - build 4397

1. С форума: Странное поведение поиска F7/Shift-F7 в редактировании

2. Warnings.

zg 28.06.2015 02:50:26 +0200 - build 4396

1. ACTL_SETCURRENTWINDOW, VCTL_QUIT и ECTL_QUIT выполняются сразу.

2. ACTL_COMMIT ничего не делает и оставлена для совместимости.

w17 26.06.2015 18:43:53 +0300 - build 4395

1. Косметика.

w17 25.06.2015 13:28:40 +0300 - build 4394

1. В диалогах элементы с флагами DIF_CENTERGROUP|DIF_HIDDEN не должны занимать место.

2. Продолжение 4392 -- при отключении дерева его пункты в меню и кнопки в диалогах теперь не показываются.

3. Новый параметр far:config -- Editor.NewFileUnixEOL
   Если задать значение True, во вновь создаваемых файлах будут использоваться юниксовые концы строк <LF>.

drkns 24.06.2015 22:13:33 +0200 - build 4393

1. Рефакторинг.

w17 15.06.2015 16:31:15 +0300 - build 4392

1. M#2951: Выкинуть все связанное с построением дерева каталогов из far3
   Пока не выкидываем, просто по-умолчанию отключаем.
   Для ценителей дерева можно через far:config сделать Panel.Tree.TurnOffCompletely = False.

drkns 09.06.2015 00:59:20 +0200 - build 4391

1. В меню дополнения клик мыши работал не так, как нажатие Enter.

drkns 06.06.2015 23:50:38 +0200 - build 4390

1. Более корректное решение для 4388.

drkns 05.06.2015 00:28:50 +0200 - build 4389
