@@ -1,4 +1,8 @@
-﻿drkns 28.07.2015 23:15:06 +0200 - build 4403
+﻿drkns 29.07.2015 23:25:17 +0200 - build 4404
+
+1. Не сортируем файлы описаний при изменении.
+
+drkns 28.07.2015 23:15:06 +0200 - build 4403
 
 1. Рефакторинг.
 
